feat: modal_close 오류 해결 - ui.js에 초기 작성된 modal_close 소스와 company에 있는 소스가 충돌한 내용 - ui.js에 초기에 작성한 소스 제거 후 테스팅 > 오류 해결

--- a/pub/company.html
+++ b/pub/company.html
@@ -857,38 +857,35 @@
     });
 
     $(function () {
-      function openModal(targetSelector) {
-        let $modal = $(targetSelector);
-        $modal.addClass('is-open');
-        $('body').addClass('no-scroll');
-      }
-
-      function closeModal($modal) {
-        $modal.removeClass('is-open');
-        $('body').removeClass('no-scroll');
-      }
-
       $('.js-open-modal').on('click', function (e) {
         e.preventDefault();
         let target = $(this).data('target');
-        openModal(target);
+        let $modal = $(target);
+
+        if ($modal.length) {
+          $modal.addClass('is-open');
+          $('body').addClass('no-scroll');
+        }
       });
 
       $(document).on('click', '.modal_overlay .modal_close', function () {
         let $modal = $(this).closest('.modal_overlay');
-        closeModal($modal);
+        $modal.removeClass('is-open');
+        $('body').removeClass('no-scroll');
       });
 
       $(document).on('click', '.modal_overlay', function (e) {
         if ($(e.target).is('.modal_overlay')) {
-          closeModal($(this));
+          $(this).removeClass('is-open');
+          $('body').removeClass('no-scroll');
         }
       });
 
       $(document).on('keyup', function (e) {
         if (e.key === 'Escape') {
           $('.modal_overlay.is-open').each(function () {
-            closeModal($(this));
+            $('.modal_overlay.is-open').removeClass('is-open');
+            $('body').removeClass('no-scroll');
           });
         }
       });
