--- a/pub_list.html
+++ b/pub_list.html
@@ -82,7 +82,7 @@
             <a href="./pub/customer.html" target="_blank">
                 <p>고객지원</p>
                 <span>customer.html</span>
-                <span></span>
+                <span>탭 형식 원 페이지</span>
             </a>
         </li> 
         <li>
@@ -92,20 +92,6 @@
                 <span></span>
             </a>
         </li> 
-        <li>
-            <a href="#none" target="_blank">
-                <p>고객지원 - 공지사항</p>
-                <span></span>
-                <span></span>
-            </a>
-        </li> 
-        <li>
-            <a href="#none" target="_blank">
-                <p>고객지원 - 주요 고객사</p>
-                <span></span>
-                <span></span>
-            </a>
-        </li>
     </ul>
 </body>
 </html>
