--- a/pub/product_intro.html
+++ b/pub/product_intro.html
@@ -294,10 +294,9 @@
                                                         <dd>74kg</dd>
                                                     </div>
                                                 </dl>
-
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -334,9 +333,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -373,9 +372,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -411,9 +410,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -449,9 +448,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -487,9 +486,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -525,9 +524,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
@@ -563,9 +562,9 @@
                                                     </div>
                                                 </dl>
 
-                                                <button type="button" class="product_card_btn">
-                                                    <span>제품 카탈로그 보기</span>
-                                                </button>
+                                                <div class="btn_round">
+                                                    <button type="button">제품 카탈로그 보기</button>
+                                                </div>
                                             </div>
                                         </article>
                                     </div>
